package smartcolors;

option java_package = "org.smartcolors.protos";
option java_outer_classname = "Protos";

message SortedTransaction {
    // Hash of the transaction.
    required bytes transaction_hash = 1;
    // Index of transaction output used by this input.
    required uint32 index = 2;
}

message BlockToSortedTransaction {
    required bytes block_hash = 1;
    required SortedTransaction transaction = 2;
}

message OutPointValue {
    // Hash of the transaction.
    required bytes hash = 1;
    // Index of transaction output.
    required uint64 index = 2;
    required uint64 value = 3;
}

message ColorDefinition {
    required bytes hash = 1;
}

message ColorProof {
    required ColorDefinition color_definition = 1;
    repeated OutPointValue outputs = 2;
    repeated OutPointValue unspent_outputs = 3;
    repeated SortedTransaction txs = 4;
}

message ColorScanner {
    repeated BlockToSortedTransaction block_to_transaction = 1;
    repeated ColorProof proofs = 2;
}